fix the headling letter spacing

--- a/public/global.css
+++ b/public/global.css
@@ -78,7 +78,6 @@ strong {
   letter-spacing: 0.05em;
   color: var(--gray-0);
   line-height: 1.3;
-  letter-spacing: 0.025em;
 }
 
 p {
